<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:paddingStart="@dimen/margin_20"
        android:paddingEnd="@dimen/margin_20">

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_5"
            android:contentDescription="@string/cancel_adding_medication"
            app:srcCompat="@drawable/ic_close_white_24dp"
            android:layout_centerVertical="true" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_18"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginEnd="@dimen/margin_10"
            android:layout_centerInParent="true"
            android:text="@string/add_new_medication"/>

        <ImageView
            android:id="@+id/iv_done"
            android:padding="@dimen/margin_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/save_medication"
            android:layout_alignParentEnd="true"
            app:srcCompat="@drawable/ic_check_circle_white_24dp"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_gray_db"
        android:scrollbars="none">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            app:cardElevation="2dp"
            app:cardCornerRadius="@dimen/margin_5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="@dimen/margin_20">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_med_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/darkerGray"
        android:textColorHint="@color/darkerGray"
        android:layout_gravity="center"
        android:paddingStart="@dimen/margin_10"
        android:paddingEnd="@dimen/margin_10"
        android:paddingBottom="@dimen/margin_5">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/tie_med_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/medication_name"
        android:inputType="text"
        android:textColorHint="@color/darkerGray"
        app:backgroundTint="@color/colorPrimary" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_med_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/darkerGray"
        android:textColorHint="@color/darkerGray"
        android:layout_gravity="center"
        android:paddingStart="@dimen/margin_10"
        android:paddingEnd="@dimen/margin_10"
        android:paddingBottom="@dimen/margin_5">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/tie_med_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/medication_desc"
        android:inputType="textMultiLine"
        android:lines="3"
        android:gravity="top"
        android:textColorHint="@color/darkerGray"
        app:backgroundTint="@color/colorPrimary" />
    </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingStart="@dimen/margin_10"
            android:orientation="horizontal"
            android:paddingEnd="@dimen/margin_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_18"
                android:text="@string/frequency"/>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginEnd="@dimen/margin_10"
                android:background="@drawable/white_gradient_button">
                <com.jaredrummler.materialspinner.MaterialSpinner
                    android:id="@+id/spinner_med_freq"
                    android:layout_width="match_parent"
                    android:background="@android:color/transparent"
                    app:ms_background_color="@android:color/transparent"
                    app:ms_background_selector="@color/white"
                    android:layout_height="40dp" />
            </LinearLayout>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_med_start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/darkerGray"
            android:textColorHint="@color/darkerGray"
            android:layout_gravity="center"
            android:paddingStart="@dimen/margin_10"
            android:paddingEnd="@dimen/margin_10"
            android:paddingBottom="@dimen/margin_5">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tie_med_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/start_date"
                android:inputType="text"
                android:lines="5"
                android:focusable="false"
                android:textColorHint="@color/darkerGray"
                app:backgroundTint="@color/colorPrimary" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_med_end_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/darkerGray"
            android:textColorHint="@color/darkerGray"
            android:layout_gravity="center"
            android:paddingStart="@dimen/margin_10"
            android:paddingEnd="@dimen/margin_10"
            android:paddingBottom="@dimen/margin_5">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tie_med_end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/end_date"
                android:inputType="text"
                android:focusable="false"
                android:lines="5"
                android:textColorHint="@color/darkerGray"
                app:backgroundTint="@color/colorPrimary" />
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_margin="@dimen/margin_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/margin_10"
                android:textSize="@dimen/text_size_18"
                android:text="@string/add_reminder"
                android:layout_marginRight="@dimen/margin_10" />

            <Switch
                android:id="@+id/switch_reminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_reminder_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/darkerGray"
            android:textColorHint="@color/darkerGray"
            android:layout_gravity="center"
            android:paddingStart="@dimen/margin_5"
            android:paddingEnd="@dimen/margin_5"
            android:paddingBottom="@dimen/margin_5">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tie_reminder_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/time_of_reminder"
                android:inputType="text"
                android:focusable="false"
                android:textColorHint="@color/darkerGray"
                app:backgroundTint="@color/colorPrimary" />
        </android.support.design.widget.TextInputLayout>



        <LinearLayout
            android:id="@+id/ll_reminder_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible"
            android:gravity="center"
            android:baselineAligned="false"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.8"
                android:text="@string/repeat_reminder"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginLeft="@dimen/margin_10"
                android:textSize="@dimen/text_size_16"
                android:layout_height="wrap_content" />


            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1.2"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="@dimen/margin_5"
                android:layout_marginEnd="@dimen/margin_5"
                android:background="@drawable/white_gradient_button">
                <com.jaredrummler.materialspinner.MaterialSpinner
                    android:id="@+id/spinner_reminder_freq"
                    android:layout_width="match_parent"
                    android:background="@android:color/transparent"
                    app:ms_background_color="@android:color/transparent"
                    app:ms_background_selector="@color/white"
                    android:layout_height="40dp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

        </android.support.v7.widget.CardView>

    </ScrollView>

</LinearLayout>
</layout>