<resources>
    <string name="app_name">Med Manager</string>
    <string name="sign_out">Sign Out</string>
    <string name="medication_name">Medication Name</string>
    <string name="frequency">Daily Frequency:</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="medication_desc">Description</string>
    <string name="add_medication">Add Medication</string>
    <string name="save_medication">Save Medication</string>
    <string name="add_new_medication">Add New Medication</string>
    <string name="cancel_adding_medication">Cancel Adding Medication</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="time_of_reminder">Time of Reminder</string>
    <string name="search">search</string>
    <string name="profile">Profile</string>
    <string name="medications_by_month">Sort Medications</string>
    <string name="last_treated_ailment">last Active Medication:</string>
    <string name="log_out">Log Out</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="genotype">Genotype</string>
    <string name="save">Save</string>
    <string name="gender">Gender:</string>
    <string name="profile_image">Profile Image</string>
    <string name="not_set">Not Set</string>
    <string name="previous_year">Previous Year</string>
    <string name="next_year">Next Year</string>
    <string name="pill_image">Pill Image</string>
    <string name="permission_rationale">Calendar access is needed for medication reminders</string>
    <string name="repeat_reminder">Repeat Reminder:</string>
    <string name="bullet">\u2022</string>
    <string name="login_page_logo">Login Page Logo</string>
    <string name="login_with_your_google_account">Login with your Google Account</string>
    <string name="empty_text">No Medication added yet, Click on the plus icon to add one</string>
    <string name="to_be_taken">To be taken:</string>
    <string name="alarm_time">Alarm/Notification Time</string>
    <string name="delete">Delete</string>
    <string name="repeat_alarm">Repeat Alarm:</string>
</resources>
