<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="101"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile"
        app:showAsAction="always" />
</menu>
